src/main/metadata-au/objects/SMS_Code__c.object
<CustomObject>
    <description>A child object under &quot;Template&quot;, will be mapped with customer&apos;s reply. It will define and lead to follow-up actions.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NextMMSTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next MMS Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Template__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Children MMS Template</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>MMS Codes</relationshipLabel>
        <relationshipName>MMSCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NextSMSTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Will use this template if the code requires a SMS</description>
        <label>Next SMS Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Template__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Children SMS Template</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>SMS Codes</relationshipLabel>
        <relationshipName>SMSCode1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OBTaskSubject__c</fullName>
        <label>OB Task Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMSCode__c</fullName>
        <description>Support Customer&apos;s response code.</description>
        <label>SMS Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendClosureSMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Closure SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>SMS Codes</relationshipLabel>
        <relationshipName>SMSCodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SMS Code</label>
    <nameField>
        <displayFormat>RC-{00000000}</displayFormat>
        <label>SMS Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Codes</pluralLabel>
    <recordTypes>
        <fullName>GenerateDownstreamMMS</fullName>
        <active>true</active>
        <label>Generate Downstream MMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>GenerateDownstreamSMS</fullName>
        <active>true</active>
        <label>Generate Downstream SMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Generate_OB_Task</fullName>
        <active>true</active>
        <label>Generate OB Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Register_Campaign</fullName>
        <active>true</active>
        <label>Register Campaign</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Next_SMS_when_Send_Closure_SMS</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(NextSMSTemplate__c)),SendClosureSMS__c=TRUE)</errorConditionFormula>
        <errorMessage>You can not choose &quot;Next SMS&quot; and &quot;Send Closure SMS&quot; together!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Template_Closure_SMS_Required</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.Name == &apos;Generate OB Task&apos; || RecordType.Name == &apos;Register Campaign&apos;) &amp;&amp; SendClosureSMS__c &amp;&amp; Template__c != null &amp;&amp; ISBLANK(Template__r.Closure_SMS__c)</errorConditionFormula>
        <errorMessage>Your must enter a Closure SMS value for your template if the Send Closure SMS is checked.</errorMessage>
    </validationRules>
</CustomObject>